--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         <div class="header-content">
             <div class="logo">
                 <div class="logo-icon">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ_2oS_qxH0sWlg5nGLQ1B615EZUPaYn7OiiwC2_mwjTigSWPJtj45ZwQe_eDupvrRJL-2cHgXmnL78xdCiEVH4j6B3cH-feQrRbZJC55We088b5O-Mw1-mSN67C2XCo0UIBfE2aD0UG3htHnawP2Ey6uD1y9LIATl1G1rxgA0RhSCzooBPJXPgCK-uW4/s1536/Picsart_24-07-18_12-07-08-795.png" alt="WinRah Logo">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglqxYh8HnlTcLve2zSoxARBzB-nMH8nA2j3zpkeoaJPqWdBadutRlwmaMq5i2zkvPixOUUtxf9S9G_H6L4mdzhGzuvZMz_DaebteI6UEGQ_NsakmX-mgtU7gpYRXT_vA1_dE_Ol4BlfDMzQiHdjwoIZnxPaDK5Igj6I1ACv2kPtc36fizDmy-FQdP30Ok/s320/Picsart_25-10-23_23-29-24-614.png" alt="WinRah Logo">
                 </div>
                 <span>WinRah</span>
             </div>
@@ -651,10 +651,10 @@
                     </div>
                     
                     <div class="hero-image animate-on-scroll fade-in" style="transition-delay: 0.3s;">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ_2oS_qxH0sWlg5nGLQ1B615EZUPaYn7OiiwC2_mwjTigSWPJtj45ZwQe_eDupvrRJL-2cHgXmnL78xdCiEVH4j6B3cH-feQrRbZJC55We088b5O-Mw1-mSN67C2XCo0UIBfE2aD0UG3htHnawP2Ey6uD1y9LIATl1G1rxgA0RhSCzooBPJXPgCK-uW4/s320/Picsart_24-07-18_12-07-08-795.png" alt="WinRah App Icon">
+                        <!-- ========= IMAGE UPDATED HERE ========= -->
+                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglqxYh8HnlTcLve2zSoxARBzB-nMH8nA2j3zpkeoaJPqWdBadutRlwmaMq5i2zkvPixOUUtxf9S9G_H6L4mdzhGzuvZMz_DaebteI6UEGQ_NsakmX-mgtU7gpYRXT_vA1_dE_Ol4BlfDMzQiHdjwoIZnxPaDK5Igj6I1ACv2kPtc36fizDmy-FQdP30Ok/s320/Picsart_25-10-23_23-29-24-614.png" alt="WinRah App Icon">
                     </div>
                     
-                    <!-- ========= DOWNLOAD AREA MOVED HERE (BELOW IMAGE) ========= -->
                     <div class="download-area animate-on-scroll fade-in-up" style="transition-delay: 0.4s; margin-top: 40px;">
                          <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=2" class="download-btn">
                             📥 <span lang="ar">حمل التطبيق الآن</span><span lang="fr">Téléchargez l'application</span>
@@ -715,7 +715,6 @@
                 <div class="carousel-outer-container animate-on-scroll fade-in" style="transition-delay: 0.2s;">
                     <div class="carousel-container">
                         <div class="carousel-main">
-                            <!-- ========= IMAGES WITH CORRECTED SRC ATTRIBUTES ========= -->
                             <div class="carousel-slide">
                                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEin-84HylaTqpfa32LUgSQPsi22XjWOGsOkiN-4seEugOGte2iTYWirdrTznDXRAZeVzkWXiFn1EbhTY62dXC1bpmgq45hv2l5QhCqW2e5XizFuY3xHdzpBSWj4Dv8iH0QPzZXV9PFw-Vfw3kNazlSutTy1PwXId3eHb4wJfuait14zhxkmd1uIWXGGwUY/s1600/Picsart_25-10-22_18-46-45-143.png" alt="Screenshot 1">
                             </div>
