--- a/index.html
+++ b/index.html
@@ -455,7 +455,65 @@
         html[dir="ltr"] .about-us-content .label-info { border-left: 4px solid var(--primary); }
         
         /* ==================== FOOTER ==================== */
-        footer { background: var(--dark); color: white; }
+        footer { 
+            background: var(--dark); 
+            color: white; 
+            padding-bottom: 40px;
+        }
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 40px;
+            padding-bottom: 40px;
+        }
+        .footer-section .logo {
+            color: white;
+            margin-bottom: 10px;
+        }
+        .footer-section h4 {
+            font-size: 18px;
+            margin-bottom: 20px;
+            color: white;
+            font-weight: bold;
+            position: relative;
+            padding-bottom: 10px;
+        }
+        .footer-section h4::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            width: 40px;
+            height: 2px;
+            background: var(--primary);
+        }
+        html[dir="rtl"] .footer-section h4::after { right: 0; }
+        html[dir="ltr"] .footer-section h4::after { left: 0; }
+        .footer-section ul {
+            list-style: none;
+            padding: 0;
+        }
+        .footer-section ul li {
+            margin-bottom: 10px;
+        }
+        .footer-section a {
+            color: rgba(255,255,255,0.7);
+            text-decoration: none;
+            transition: color 0.3s, padding-right 0.3s, padding-left 0.3s;
+        }
+        .footer-section a:hover {
+            color: white;
+        }
+        html[dir="rtl"] .footer-section ul a:hover { padding-right: 5px; }
+        html[dir="ltr"] .footer-section ul a:hover { padding-left: 5px; }
+        .footer-desc {
+            color: rgba(255,255,255,0.7);
+            line-height: 1.7;
+            margin-top: 5px;
+        }
+        .footer-email {
+            font-weight: bold;
+            word-break: break-all;
+        }
         .footer-bottom {
             border-top: 1px solid rgba(255,255,255,0.2);
             padding-top: 30px;
@@ -464,7 +522,7 @@
             color: rgba(255,255,255,0.7);
         }
 
-        /* ========= SIDE MENU (MOBILE) (CORRECTED & SIMPLIFIED) ========= */
+        /* ==================== SIDE MENU (MOBILE) ==================== */
         .side-menu {
             position: fixed;
             top: 0;
@@ -597,7 +655,7 @@
             </nav>
 
             <div class="header-right">
-                <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=2" class="download-btn">
+                <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=4" class="download-btn">
                     <span lang="ar">حمل الآن</span><span lang="fr">Télécharger</span>
                 </a>
                 <button class="menu-toggle">☰</button>
@@ -612,7 +670,6 @@
         </div>
     </div>
 
-    <!-- ========= SIDE MENU UPDATED HERE ========= -->
     <div id="side-menu" class="side-menu">
         <div class="side-menu-content">
             <div class="side-menu-links">
@@ -625,7 +682,7 @@
                 <a href="#"><span lang="ar">سياسة الخصوصية</span><span lang="fr">Politique de confidentialité</span></a>
             </div>
             <div class="download-app-btn">
-                 <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=2" class="download-btn">
+                 <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=4" class="download-btn">
                     <span lang="ar">حمل التطبيق</span><span lang="fr">Télécharger l'app</span>
                  </a>
             </div>
@@ -650,7 +707,7 @@
                     </div>
                     
                     <div class="download-area animate-on-scroll fade-in-up" style="transition-delay: 0.4s; margin-top: 40px;">
-                         <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=2" class="download-btn">
+                         <a href="https://apk.e-droid.net/apk/app3771562-y2tx5k.apk?v=4" class="download-btn">
                             📥 <span lang="ar">حمل التطبيق الآن</span><span lang="fr">Téléchargez l'application</span>
                          </a>
                          <div class="hero-stats">
@@ -759,7 +816,29 @@
 
     <footer class="full-bleed">
         <div class="container">
-            <p style="text-align:center; font-size:24px; font-weight:bold; margin-bottom: 40px;">WinRah</p>
+            <div class="footer-grid">
+                <div class="footer-section">
+                     <div class="logo">
+                        <div class="logo-icon">
+                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglqxYh8HnlTcLve2zSoxARBzB-nMH8nA2j3zpkeoaJPqWdBadutRlwmaMq5i2zkvPixOUUtxf9S9G_H6L4mdzhGzuvZMz_DaebteI6UEGQ_NsakmX-mgtU7gpYRXT_vA1_dE_Ol4BlfDMzQiHdjwoIZnxPaDK5Igj6I1ACv2kPtc36fizDmy-FQdP30Ok/s320/Picsart_25-10-23_23-29-24-614.png" alt="WinRah Logo">
+                        </div>
+                        <span>WinRah</span>
+                    </div>
+                    <p class="footer-desc"><span lang="ar">رفيقك الأول في رحلات القطار.</span><span lang="fr">Votre premier compagnon pour les voyages en train.</span></p>
+                </div>
+                <div class="footer-section">
+                    <h4><span lang="ar">روابط سريعة</span><span lang="fr">Liens rapides</span></h4>
+                    <ul>
+                        <li><a href="#"><span lang="ar">الصفحة الرئيسية</span><span lang="fr">Accueil</span></a></li>
+                        <li><a href="#about-us"><span lang="ar">من نحن</span><span lang="fr">À propos de nous</span></a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4><span lang="ar">اتصل بنا</span><span lang="fr">Nous contacter</span></h4>
+                     <p class="footer-desc"><span lang="ar">للتواصل عبر البريد الإلكتروني:</span><span lang="fr">Pour nous contacter par email :</span></p>
+                     <a href="mailto:algeria.ai007@gmail.com" class="footer-email">algeria.ai007@gmail.com</a>
+                </div>
+            </div>
             <div class="footer-bottom">
                 <p>© 2025 WinRah. <span lang="ar">جميع الحقوق محفوظة.</span><span lang="fr">Tous droits réservés.</span></p>
             </div>
