--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
             </nav>
 
             <div class="header-right">
-                <a href="https://download1334.mediafire.com/tsd2l4lr0fzgSgQErVUmhb366TgIl7WEkQLGiyefZaUMV2t_Ht3vBbQ3O0IPCTOirx6VCjEAGGhEf-RXfwFohVCvtLCBX-MXviF1QsjnDPhlyXP3PJ0VnVKuKUgpzTFpLq1UKlNi889gV0Ju44lNCSjIJ3UNOuKguA6d2Qy4FNDwey0/t3635k5tly5fai6/winrah.apk" class="download-btn">
+                <a href="https://cold2.gofile.io/download/web/8afeb3e9-c113-4fb6-b244-8dfaea64fafb/winrah.apk" class="download-btn">
                     <span lang="ar">حمل الآن</span><span lang="fr">Télécharger</span>
                 </a>
                 <button class="menu-toggle">☰</button>
@@ -716,7 +716,7 @@
                 <a href="#"><span lang="ar">سياسة الخصوصية</span><span lang="fr">Politique de confidentialité</span></a>
             </div>
             <div class="side-menu-footer">
-                 <a href="https://download1334.mediafire.com/tsd2l4lr0fzgSgQErVUmhb366TgIl7WEkQLGiyefZaUMV2t_Ht3vBbQ3O0IPCTOirx6VCjEAGGhEf-RXfwFohVCvtLCBX-MXviF1QsjnDPhlyXP3PJ0VnVKuKUgpzTFpLq1UKlNi889gV0Ju44lNCSjIJ3UNOuKguA6d2Qy4FNDwey0/t3635k5tly5fai6/winrah.apk" class="download-btn">
+                 <a href="https://cold2.gofile.io/download/web/8afeb3e9-c113-4fb6-b244-8dfaea64fafb/winrah.apk" class="download-btn">
                     <span lang="ar">حمل التطبيق</span><span lang="fr">Télécharger l'app</span>
                  </a>
             </div>
@@ -741,7 +741,7 @@
                     </div>
                     
                     <div class="download-area animate-on-scroll fade-in-up" style="transition-delay: 0.4s; margin-top: 40px;">
-                         <a href="https://download1334.mediafire.com/tsd2l4lr0fzgSgQErVUmhb366TgIl7WEkQLGiyefZaUMV2t_Ht3vBbQ3O0IPCTOirx6VCjEAGGhEf-RXfwFohVCvtLCBX-MXviF1QsjnDPhlyXP3PJ0VnVKuKUgpzTFpLq1UKlNi889gV0Ju44lNCSjIJ3UNOuKguA6d2Qy4FNDwey0/t3635k5tly5fai6/winrah.apk" class="download-btn">
+                         <a href="https://cold2.gofile.io/download/web/8afeb3e9-c113-4fb6-b244-8dfaea64fafb/winrah.apk" class="download-btn">
                             📥 <span lang="ar">حمل التطبيق الآن</span><span lang="fr">Téléchargez l'application</span>
                          </a>
                          <div class="hero-stats">
