--- a/index.html
+++ b/index.html
@@ -1459,8 +1459,8 @@
         <section id="live-tracker" class="full-bleed" dir="rtl">
             <div class="container">
                 <div class="section-title animate-on-scroll fade-in-up">
-                    <h2><span lang="ar">المتتبع المباشر</span><span lang="fr">Suivi en direct du train</span></h2>
-                    <p><span lang="ar">اختر خطك واتبع موقع القطار لحظة بلحظة.</span><span lang="fr">Choisissez votre ligne et suivez la position du train en temps réel.</span></p>
+                    <h2><span lang="ar">المتتبع المباشر</span></h2>
+                    <p><span lang="ar">اختر خطك واتبع موقع القطار لحظة بلحظة.</span></p>
                 </div>
                 
                 <div class="header">
